# Segmentation12

./: README.md
icnet/: compute_mean.ipynb  solver.prototxt
icnet/c++_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  seg_infer  seg_main.cpp
icnet/c++_test/lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  seg_test.cpp  seg_test.hpp
icnet/log/: Untitled.ipynb  log_segnet.log.train  parse_log.py
icnet/prototxt/: PSPNet.prototxt  cityscapes.prototxt  cityscapes_test.prototxt  sub124_640_test.prototxt  sub124_640_train.prototxt  sub24_512_test.prototxt  train.prototxt
